# ORIGINMAP

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
kaggle/: create_curated_dataset.py
notes/: EXECUTIVE_SUMMARY_O-D1_to_O-D10.md  EXECUTIVE_SUMMARY_O-D1_to_O-D8.md
reports/: O-D10_class_enrichment.csv  O-D10_falls_results.json  O-D10_hypothesis_summary.csv  O-D6_bootstrap.csv  O-D6_heterogeneity_by_grade.csv  O-D6_perm_pvalues.json  O-D7_clustering_summary.json  O-D7_stability_regimes.csv  O-D8_threshold_detail.csv  O-D8_threshold_results.json  O-D8_threshold_summary.csv  O-D9_era_comparison.csv  O-D9_hypothesis_summary.csv  O-D9_temporal_results.json  battery_20260104_225044_report.md  battery_20260104_225044_results.csv  battery_20260104_225044_summary.json  battery_20260104_225044_survival.csv  battery_20260104_235905_report.md  battery_20260104_235905_results.csv  battery_20260104_235905_summary.json  battery_20260104_235905_survival.csv  diversity_by_class.csv  hypothesis_H-FRAG_results.json  hypothesis_O-Δ1_results.csv  hypothesis_O-Δ1_summary.json  hypothesis_O-Δ2_results.csv  hypothesis_O-Δ2_summary.json  hypothesis_O-Δ3_results.csv  hypothesis_O-Δ3_summary.json  hypothesis_battery_results.csv  hypothesis_battery_summary.json  hypothesis_survival_table.csv  manifest.json  manifest_1e15ed0a2a54.json  manifest_22b6a2a5ac44.json  manifest_37d27e9422c3.json  manifest_4e7a09f39fa9.json  manifest_575b64bcf3de.json  manifest_5f44900f2e7c.json  (+22 more)
scripts/: daily_observation.sh  install_cron.sh
templates/: report.html.j2
(+50 files in other folders)
