[project]
name = "originmap"
version = "0.1.0"
description = "ORIGINMAP: Reproducible computational lab for prebiótic chemistry and panspermia research"
authors = [
    {name = "Carmen Esteban"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "typer (>=0.21.0,<0.22.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[tool.poetry]
packages = [{include = "originmap", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
